# ThereCam

./: .gitignore  LICENSE  README.md
ModelProcurement/: epochValidation.py  main.py  modelValidation.py
mainProgram/: CMakeLists.txt
mainProgram/src/: main.cpp
mainProgram/src/handTracking/: handTracker.cpp  handTracker.h  inference.cpp  inference.h
mainProgram/src/utilities/: constants.h  types.h  utils.cpp  utils.h
